# rdockup

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  compose.yaml
.github/workflows/: docker.yml
client/: client  config.yaml  requirements.txt
src/: api.rs  main.rs  registry_client.rs
