[package]
name = "rdockup"
version = "0.1.0"
edition = "2024"

[dependencies]
oci-client = "0.15.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"
