[package]
name = "rdockup"
version = "0.1.0"
edition = "2024"

[dependencies]
oci-client = "0.15.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing = "0.1"
log = "0.4"
semver = "1.0"
regex = "1.1"
ctrlc = "3.4"
